fixes contrast

--- a/css/main.css
+++ b/css/main.css
@@ -40,14 +40,14 @@ img {
 
 .skip-links{
   list-style: none;
+  color: #fff;
 }
 
 .skip-links a {
-  padding-bottom: .5rem 1rem;
+  padding:1rem;
   position: absolute;
   top: -3rem;
-  /* background-color: black; */
-  color: white;
+  color: black;
   font-weight: bold;
 }
 
@@ -62,7 +62,7 @@ img {
   list-style: none;
   display: flex;
   flex-wrap: wrap;
-  margin: 0;
+  margin: 0.5rem;
   padding: 1rem;
 }
 
@@ -76,6 +76,7 @@ img {
   color: inherit;
   text-decoration: none;
   font-size: 1.25rem;
+  padding: 0.5rem;
 }
 
 .main-nav ul li a:hover, 
@@ -83,9 +84,6 @@ img {
   color:#fff;
   background-color: black;
 }
-
-
-
 
 
 form input,
@@ -104,7 +102,8 @@ form textarea {
 }
 
 form button {
-  background: none;
+  background: black;
+  color: white;
   border: 2px solid black;
   padding: 1rem;
   text-transform: uppercase;
